# iron-core

./: .gitignore  Cargo.toml  MCP_IMPLEMENTATION_STATUS.md  README.md  review.md
.github/workflows/: release-manual.yml  release-patch.yml
docs/: architecture-cleanup-checklist.md  architecture-overview.md  getting-started-iron-core.md  integration-plugins.md  prompt-composition.md
docs/archive/: mcp-audit-resolved.md  mcp-implementation-status-2026-04-11.md
openspec/changes/align-runtime-context-working-directory/: tasks.md
openspec/changes/archive/2026-04-09-expose-python-tool-methods/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-fix-context-compaction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-improve-python-exec-guidance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-session-scoped-mcp-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-update-iron-providers-version/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-close-mcp-correctness-gaps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-finish-mcp-outstanding-work/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-fully-operational-mcp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-add-agent-skills-support/: tasks.md  (+2 more)
openspec/changes/dynamic-system-prompt-templating/: design.md  proposal.md  tasks.md
openspec/changes/fix-mcp-camelcase-protocol-fields/: proposal.md
openspec/changes/fully-implement-mcp-and-wasm-plugins/: plugin-system-implementation-plan.md
openspec/changes/handle-missing-mcp-response-id/: design.md  proposal.md
openspec/changes/hybrid-stdio-env-sanitization/: design.md
openspec/changes/support-model-choice-prompts/: design.md  proposal.md  tasks.md
openspec/changes/support-rich-wasm-plugin-output/: design.md  proposal.md  tasks.md
openspec/changes/support-runtime-auth-interactions/: proposal.md
openspec/changes/wasm-integration-plugins/: design.md  proposal.md  tasks.md
openspec/specs/agent-skills/: spec.md
openspec/specs/context-compaction/: spec.md
openspec/specs/dependency-version-guidance/: spec.md
openspec/specs/mcp-http-headers/: spec.md
openspec/specs/provider-credential-orchestration/: spec.md
openspec/specs/python-tool-namespace/: spec.md
openspec/specs/runtime-auth-interactions/: spec.md
openspec/specs/session-scoped-mcp-support/: spec.md
openspec/specs/wasm-integration-plugins/: spec.md
src/: capability.rs  config.rs  connection.rs  durable.rs  ephemeral.rs  error.rs  events.rs  facade.rs  lib.rs  loop_state.rs  prompt_lifecycle.rs  prompt_runner.rs  prompt_turn.rs  request_builder.rs  runtime.rs  schema.rs  session.rs  session_handle.rs  session_runtime.rs  tool.rs  transport.rs  turn.rs
src/builtin/: config.rs  error.rs  file_ops.rs  helpers.rs  mod.rs  policy.rs  registration.rs  render.rs  search.rs  shell.rs  web.rs
src/context/: accounting.rs  compaction.rs  config.rs  handoff.rs  mod.rs  models.rs  telemetry.rs
src/embedded_python/: catalog.rs  convert.rs  engine.rs  mod.rs  python_exec_tool.rs  sandbox.rs  types.rs
src/mcp/: client.rs  connection.rs  effective_tools.rs  mod.rs  protocol.rs  server.rs  session_catalog.rs
src/plugin/: auth.rs  config.rs  effective_tools.rs  lifecycle.rs  manifest.rs  mod.rs  network.rs  registry.rs  rich_output.rs  session.rs  status.rs  wasm_host.rs
src/prompt/: assembly.rs  baseline.rs  config.rs  mod.rs  repo_loader.rs  runtime_context.rs  system.rs
src/provider_credential/: domain.rs  mod.rs  oauth.rs  resolver.rs  store.rs
src/skill/: catalog.rs  mod.rs  source.rs
tests/: acp_runtime_tests.rs  builtin_tool_tests.rs  config_bridge_tests.rs  config_tests.rs  context_management_tests.rs  embedded_python_tests.rs  event_tests.rs  interaction_tests.rs  interop_tests.rs  loop_tests.rs  mcp_e2e_tests.rs  mcp_integration_tests.rs  mcp_outstanding_tests.rs  mcp_tests.rs  mcp_visibility_tests.rs  prompt_composition_tests.rs  session_handle_tests.rs  session_tests.rs  tool_tests.rs  transport_bench_tests.rs
(+60 files in other folders)
