[package]
name = "iron-core"
version = "0.1.7"
edition = "2021"
authors = ["Paul Mooring"]
license = "Apache-2.0"
rust-version = "1.91"
description = "Core AgentIron loop, session state, and tool registry"
readme = "README.md"
repository = "https://github.com/AgentIron/iron-core"
exclude = [
    ".opencode/**",
    "openspec/**",
    "tasks.py",
    "Cargo.lock",
]

[dependencies]
iron-providers = "0.1.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
pin-project = "1"
parking_lot = "0.12"

# ACP SDK
agent-client-protocol = { version = "0.11", features = ["unstable_session_close"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

# Schema validation
jsonschema = "0.46"

# Plugin dependencies
sha2 = "0.11"
hex = "0.4"
extism = "1.21"
chrono = { version = "0.4", features = ["serde"] }

# Built-in tool dependencies
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2"

# Ripgrep ecosystem — embedded search engine for glob/grep tools.
# These are the same library crates that power ripgrep itself, providing
# correct glob semantics, .gitignore-aware traversal, and high-performance
# regex search without requiring an external `rg` binary on the host.
ignore = "0.4"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"

# Embedded Python runtime (Monty)
#
# Position B adoption: pinned to a specific upstream commit for reproducibility.
# crates.io only has a 0.0.0 placeholder, so a git dep is the only viable path.
# Re-evaluate once Monty publishes a usable semver release.
# Do NOT fork unless upstream cannot resolve a real Level 3 portability blocker.
#
# Publication of iron-core to crates.io is deferred until monty is available
# there, because crates.io rejects manifests containing git dependencies.
#
# Bump `rev` deliberately after verifying against the iron-core test suite.
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.17", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
default = []
embedded-python = ["monty", "num-bigint", "num-traits"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
